grammar/SnMsLangParser.py
# Generated from SnMsLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SnMsLangParser ( Parser ):

    grammarFileName = "SnMsLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'wypisz'", "'('", "')'", 
                     "'wczytaj'", "'jezeli'", "'inaczej'", "'dopoki'", "'zwroc'", 
                     "'yield'", "'{'", "'}'", "'funkcja'", "'generator'", 
                     "'klasa'", "'struktura'", "'globalna'", "'lokalna'", 
                     "'['", "','", "']'", "'*'", "'/'", "'+'", "'-'", "'=='", 
                     "'!='", "'<'", "'>'", "'<>'", "'&&'", "'||'", "'^'", 
                     "'!'", "'liczba'", "'zmiennoprzecinkowa'", "'32'", 
                     "'64'", "'tekst'", "'bool'", "'zmienna'", "'dynamiczny'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "INT", "FLOAT", "STRING", "BOOL", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_printStmt = 3
    RULE_readStmt = 4
    RULE_ifStmt = 5
    RULE_whileStmt = 6
    RULE_returnStmt = 7
    RULE_yieldStmt = 8
    RULE_block = 9
    RULE_funcDecl = 10
    RULE_generatorDecl = 11
    RULE_classDecl = 12
    RULE_structDecl = 13
    RULE_varDecl = 14
    RULE_paramList = 15
    RULE_param = 16
    RULE_expr = 17
    RULE_typ = 18

    ruleNames =  [ "program", "statement", "assignment", "printStmt", "readStmt", 
                   "ifStmt", "whileStmt", "returnStmt", "yieldStmt", "block", 
                   "funcDecl", "generatorDecl", "classDecl", "structDecl", 
                   "varDecl", "paramList", "param", "expr", "typ" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    ID=44
    INT=45
    FLOAT=46
    STRING=47
    BOOL=48
    WS=49
    ERROR_CHAR=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SnMsLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.statement()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 34291019927240) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SnMsLangParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.PrintStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.ReadStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.WhileStmtContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(SnMsLangParser.FuncDeclContext,0)


        def generatorDecl(self):
            return self.getTypedRuleContext(SnMsLangParser.GeneratorDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(SnMsLangParser.VarDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(SnMsLangParser.ClassDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(SnMsLangParser.StructDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.ReturnStmtContext,0)


        def yieldStmt(self):
            return self.getTypedRuleContext(SnMsLangParser.YieldStmtContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SnMsLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.assignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.printStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.readStmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.ifStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.whileStmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.funcDecl()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 49
                self.generatorDecl()
                pass
            elif token in [18, 19, 36, 37, 40, 41, 42, 43]:
                self.enterOuterAlt(localctx, 8)
                self.state = 50
                self.varDecl()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 9)
                self.state = 51
                self.classDecl()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 10)
                self.state = 52
                self.structDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 11)
                self.state = 53
                self.returnStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 12)
                self.state = 54
                self.yieldStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = SnMsLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(SnMsLangParser.ID)
            self.state = 58
            self.match(SnMsLangParser.T__0)
            self.state = 59
            self.expr(0)
            self.state = 60
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = SnMsLangParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(SnMsLangParser.T__2)
            self.state = 63
            self.match(SnMsLangParser.T__3)
            self.state = 64
            self.expr(0)
            self.state = 65
            self.match(SnMsLangParser.T__4)
            self.state = 66
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def getRuleIndex(self):
            return SnMsLangParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)




    def readStmt(self):

        localctx = SnMsLangParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(SnMsLangParser.T__5)
            self.state = 69
            self.match(SnMsLangParser.T__3)
            self.state = 70
            self.match(SnMsLangParser.ID)
            self.state = 71
            self.match(SnMsLangParser.T__4)
            self.state = 72
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.BlockContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = SnMsLangParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SnMsLangParser.T__6)
            self.state = 75
            self.match(SnMsLangParser.T__3)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(SnMsLangParser.T__4)
            self.state = 78
            self.block()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 79
                self.match(SnMsLangParser.T__7)
                self.state = 80
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(SnMsLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = SnMsLangParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SnMsLangParser.T__8)
            self.state = 84
            self.match(SnMsLangParser.T__3)
            self.state = 85
            self.expr(0)
            self.state = 86
            self.match(SnMsLangParser.T__4)
            self.state = 87
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = SnMsLangParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SnMsLangParser.T__9)
            self.state = 90
            self.expr(0)
            self.state = 91
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YieldStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SnMsLangParser.ExprContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_yieldStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYieldStmt" ):
                listener.enterYieldStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYieldStmt" ):
                listener.exitYieldStmt(self)




    def yieldStmt(self):

        localctx = SnMsLangParser.YieldStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_yieldStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(SnMsLangParser.T__10)
            self.state = 94
            self.expr(0)
            self.state = 95
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SnMsLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(SnMsLangParser.T__11)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34291019927240) != 0):
                self.state = 98
                self.statement()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(SnMsLangParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(SnMsLangParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(SnMsLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = SnMsLangParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(SnMsLangParser.T__13)
            self.state = 107
            self.match(SnMsLangParser.ID)
            self.state = 108
            self.match(SnMsLangParser.T__3)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34291018891264) != 0):
                self.state = 109
                self.paramList()


            self.state = 112
            self.match(SnMsLangParser.T__4)
            self.state = 113
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GeneratorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(SnMsLangParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(SnMsLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_generatorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneratorDecl" ):
                listener.enterGeneratorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneratorDecl" ):
                listener.exitGeneratorDecl(self)




    def generatorDecl(self):

        localctx = SnMsLangParser.GeneratorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_generatorDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SnMsLangParser.T__14)
            self.state = 116
            self.match(SnMsLangParser.ID)
            self.state = 117
            self.match(SnMsLangParser.T__3)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34291018891264) != 0):
                self.state = 118
                self.paramList()


            self.state = 121
            self.match(SnMsLangParser.T__4)
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.VarDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)




    def classDecl(self):

        localctx = SnMsLangParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(SnMsLangParser.T__15)
            self.state = 125
            self.match(SnMsLangParser.ID)
            self.state = 126
            self.match(SnMsLangParser.T__11)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16698833649664) != 0):
                self.state = 129
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18, 19, 36, 37, 40, 41, 42, 43]:
                    self.state = 127
                    self.varDecl()
                    pass
                elif token in [14]:
                    self.state = 128
                    self.funcDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(SnMsLangParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.VarDeclContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)




    def structDecl(self):

        localctx = SnMsLangParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SnMsLangParser.T__16)
            self.state = 137
            self.match(SnMsLangParser.ID)
            self.state = 138
            self.match(SnMsLangParser.T__11)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16698833633280) != 0):
                self.state = 139
                self.varDecl()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.match(SnMsLangParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(SnMsLangParser.TypContext,0)


        def ID(self):
            return self.getToken(SnMsLangParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(SnMsLangParser.INT)
            else:
                return self.getToken(SnMsLangParser.INT, i)

        def getRuleIndex(self):
            return SnMsLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = SnMsLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18 or _la==19:
                self.state = 147
                _la = self._input.LA(1)
                if not(_la==18 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 150
            self.typ()
            self.state = 151
            self.match(SnMsLangParser.ID)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 152
                self.match(SnMsLangParser.T__19)
                self.state = 153
                self.match(SnMsLangParser.INT)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 154
                    self.match(SnMsLangParser.T__20)
                    self.state = 155
                    self.match(SnMsLangParser.INT)
                    self.state = 160
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 161
                self.match(SnMsLangParser.T__21)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(SnMsLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SnMsLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(SnMsLangParser.ParamContext,i)


        def getRuleIndex(self):
            return SnMsLangParser.RULE_paramList
